--- a/index.ipynb
+++ b/index.ipynb
@@ -62,11 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "neighborhoods[0]"
+    "neighborhoods[0] = 'Palermo'"
    ]
   },
   {
