Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "neighborhoods[-1] = l"
+    "neighborhoods[-1] = 'La Boca'"
    ]
   },
   {
