Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -189,7 +189,7 @@
     }
    ],
    "source": [
-    "folium.Map([ba_latitude, ba_longitude])\n"
+    "foliumMap([ba_latitude, ba_longitude])\n"
    ]
   },
   {
